--- a/style.css
+++ b/style.css
@@ -1,10 +1,95 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #fbffb9;
+}
+
+.form-container {
+    border: 2px solid #ff5050;
+    width: 80%;
+    margin-left: 10%;
+    height: 100%;
+    padding: 20px;
+    background-color: #f8c6c6;
+}
+
+.form {
+    border: 2px solid #ff7979;
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 2%;
+    padding: 20px;
+    line-height: 30px;
+    background-color: #c1fdd7;
+    border-radius: 0 24px;
+    box-shadow: 4px 4px 6px #ff7979;
+}
+
+.form h2 {
+    text-align: center;
+    border-bottom: 2px solid black;
+}
+
+.inputs {
+    text-align: right;
+    margin: 10px;
+    margin-right: 20%;
+}
+
+.inputs label {
+    margin-right: 2%;
+    font-size: 20px;
+}
+
+input[type="text"], input[type="password"], textarea {
+    width: 50%;
+    font-size: 18px;
+    padding: 2px 8px;
+    border: 1px solid black;
+    background-color: #bbf9fa;
+}
+
+.buttons {
+    margin-right: 0;
+    text-align: center;
+}
+
+input[type="button"] {
+    font-size: 18px;
+    margin: 0 20px;
+    padding: 4px 10px;
+    cursor: pointer;
+    background-color: black;
+    color: white;
+    transition: ease-in-out 0.3s;
+}
+
+input[type="button"]:hover {
+    background-color: white;
+    color: black;
+}
+
 .error {
     border: 2px solid red;
 }
-body
-{
-    background: url('./b2.jpg') no-repeat;
-    
+
+.table {
+    width: 100%;
+}
+
+.table thead {
+    text-align: center;
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.table td {
+    padding: 4px 8px;
+    font-size: 18px;
 }
 
 
